[gd_scene load_steps=18 format=2]

[ext_resource path="res://Particles_playground/Temp_to_refactory/sound_hit.wav" type="AudioStream" id=1]
[ext_resource path="res://Particles_playground/Temp_to_refactory/bullet.png" type="Texture" id=2]
[ext_resource path="res://Particles_playground/Temp_to_refactory/sound_explode.wav" type="AudioStream" id=3]
[ext_resource path="res://Particles_playground/Temp_to_refactory/enemy.png" type="Texture" id=4]
[ext_resource path="res://Particles_playground/Dumb_Crab.gd" type="Script" id=5]
[ext_resource path="res://Particles_playground/Core_SM_Dumb_Crab.gd" type="Script" id=6]

[sub_resource type="Animation" id=13]
resource_name = "explode"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 0.0796601, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Explosion:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Explosion:process_material:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.6, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 4.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hit:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.00999999 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Explode:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_pre_die"
} ]
}
tracks/8/type = "value"
tracks/8/path = NodePath(".:collision_layer")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Sprite:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 2.2974, 0.183011, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -32 ), Vector2( 0, 0 ) ]
}
tracks/10/type = "method"
tracks/10/path = NodePath(".")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_pre_explode"
} ]
}

[sub_resource type="Animation" id=1]
resource_name = "explode2"
length = 6.0
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Explosion:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_pre_explode"
}, {
"args": [  ],
"method": "_die"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fall"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 1 ]
}

[sub_resource type="Animation" id=3]
length = 6.75
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75, 1.5, 2.25, 3, 3.75, 4.5, 5.25, 6, 6.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 5, 6, 5, 6, 7, 6, 7, 5 ]
}

[sub_resource type="Animation" id=4]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 0 ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 7.0
height = 5.0

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 4, 7 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 5, 4 )

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0.5, 1 )
colors = PoolColorArray( 1, 1, 1, 0.501961, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 1
emission_sphere_radius = 8.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 120.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 1.0
scale = 4.0
scale_random = 1.0
color_ramp = SubResource( 9 )

[node name="Dumb_Crab" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 3
script = ExtResource( 5 )

[node name="States" type="Node" parent="."]

[node name="Core_SM_Dumb_Crab" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="Action_SM_Dumb_Crab" type="Node" parent="States"]

[node name="Enabler" type="VisibilityEnabler2D" parent="."]
position = Vector2( 8.12845, 5.5017 )
scale = Vector2( 11.7528, 5.43145 )
pause_particles = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 13 )
anims/explode2 = SubResource( 1 )
anims/fall = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
hframes = 8
frame = 7

[node name="Shape" type="CollisionShape2D" parent="."]
position = Vector2( -0.54036, -0.0807199 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="WallDetectorFront" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -20, 0 )
collision_mask = 2
collide_with_areas = true

[node name="Ground_detector" type="RayCast2D" parent="."]
position = Vector2( 0, -4 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 2
collide_with_areas = true

[node name="Raycasts" type="Node2D" parent="."]

[node name="FloorDetectorLeft" type="RayCast2D" parent="Raycasts"]
position = Vector2( -16, -4.672 )
enabled = true
cast_to = Vector2( 0, 22.5 )
collision_mask = 2
collide_with_areas = true

[node name="FloorDetectorRight" type="RayCast2D" parent="Raycasts"]
position = Vector2( 13, -4.672 )
enabled = true
cast_to = Vector2( 0, 22.5 )
collision_mask = 2
collide_with_areas = true

[node name="HitBox_L" type="Area2D" parent="." groups=[
"HitBox",
]]
position = Vector2( -14, 0 )
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox_L"]
shape = SubResource( 12 )

[node name="HitBox_R" type="Area2D" parent="." groups=[
"HitBox",
]]
position = Vector2( 13, 0 )
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox_R"]
shape = SubResource( 12 )

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( 0, -9 )
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -1 )
shape = SubResource( 11 )

[node name="Explosion" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.685843 )
emitting = false
amount = 32
lifetime = 0.5
one_shot = true
speed_scale = 1.2
explosiveness = 0.76
process_material = SubResource( 10 )
texture = ExtResource( 2 )

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="Explode" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="HitBox_L" to="." method="_on_HitBox_L_body_entered"]
[connection signal="body_entered" from="HitBox_R" to="." method="_on_HitBox_R_body_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
